--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-pyfirmata2=2.5.1
-pyserial=3.5
-pynput=1.7.7
-tk=0.1.0
-pillow=11.1.0
+pyfirmata2==2.5.1
+pyserial==3.5
+pynput==1.7.7
+tk==0.1.0
+pillow==11.1.0
